package gofiterator;

public interface Iterable {

	/**
	 * Creates Iterator object.
	 * @return Iterator object
	 */
	public Iterator createIterator();
}
